# ros2-reinforcement-learning

./: LICENSE  README.md
rl_racing/: package.xml  setup.cfg  setup.py
rl_racing/launch/: start_training.launch.py
rl_racing/rl_racing/: gazebo_connections.py  gazebo_env.py  start_learning.py
sim_package/: CMakeLists.txt  package.xml
sim_package/launch/: robot_state_publisher.launch.py  start_simulation.launch.py
sim_package/models/racingtrack_logo/: model.config  model.sdf
sim_package/models/racingtrack_logo/meshes/: race_track.stl
sim_package/models/td_robot/: td_robot.sdf
sim_package/urdf/: td_robot.urdf
sim_package/worlds/: racing_track.world  td3.world
