<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rl_racing</name>
  <version>0.0.0</version>
  <description>Reinforcement learning for Robot racing based on stabel_baseline and OpenAI gym</description>
  <maintainer email="saqibmehmood736@gmail.com">saqib</maintainer>
  <license>TODO: License declaration</license>
  
  <depend>rclpy</depend>
  <depend>os</depend>
  <depend>sys</depend>
  <depend>glob</depend>
  <depend>setuptools</depend>
  <depend>launch</depend>
  <depend>ament_index_python</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>std_srvs</depend>
  <depend>functools</depend>
  <depend>gymnasium</depend>
  <depend>numpy</depend>
  <depend>stable_baselines3</depend>
  <depend>math</depend>
  <depend>optuna</depend>
  <depend>tensorboard</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
